--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,12 +4,29 @@
 <head>
   <meta charset="utf-8">
   <title>Example App</title>
+  <link href="/stylesheets/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+  
 </head>
 
 <body>
-
+  <header>
+    <!-- navigation -->
+    <nav class="navbar navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+            width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+          我的餐廳清單
+        </a>
+      </div>
+    </nav>
+  
+    <div class="banner"></div>
+  </header>
+  
   {{{body}}}
-
+  <script src="/javascripts/bootstrap.js"></script>
 </body>
 
 </html>
