feat: add detail page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,7 +6,10 @@
   <title>Example App</title>
   <link href="/stylesheets/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
-  
+  <link rel="shortcut icon"
+    href="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+    type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
 </head>
 
 <body>
