--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Example App</title>
+  <title>Restaurant List</title>
   <link href="/stylesheets/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
   <link rel="shortcut icon"
