--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,17 @@
                 {{restaurant.rating}}
                 <i class="fas fa-star fa-xs"></i>
               </span>
-
+              <form action="/restaurants/delete/{{restaurant.id}}?_method=DELETE" method="POST" class="mt-2" onsubmit="return confirm('Are you sure you want to delete this restaurant?');">
+                <button type="submit" class="btn btn-danger btn-sm">
+                  <i class="fas fa-trash"></i> Delete
+                </button>
+              </form>
+              <form action="/restaurants/edit/{{restaurant.id}}" method="GET" class="mt-2">
+                <button type="submit" class="btn btn-success btn-sm">
+                  <i class="fas fa-edit"></i> Edit
+                </button>
+              </form>
+            
             </div>
           </div>
         </a>
