--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,6 +22,7 @@
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
           我的餐廳清單
         </a>
+      <a href="/restaurants/create" class="btn btn-primary">新增餐廳</a>
       </div>
     </nav>
   
