--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -2,7 +2,9 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
-
+      {{#if message}}
+        <h1>{{message}}</h1>
+      {{/if}}
       <p class="mb-1">
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
@@ -17,7 +19,11 @@
           地址：
         </span>
         {{restaurant.location}}
-        <a href="{{restaurant.google_map}}" class="text-secondary" target="_blank">
+        <a
+          href="{{restaurant.google_map}}"
+          class="text-secondary"
+          target="_blank"
+        >
           <i class="fas fa-location-arrow pr-2 fa-xs"></i>
         </a>
       </p>
@@ -34,9 +40,12 @@
         {{restaurant.description}}
       </p>
 
-      <img class="rounded mx-auto d-block mb-4 w-100"
-        src="{{restaurant.image}}" alt="{{restaurant.name}}"
-        style="max-width: 600px;">
+      <img
+        class="rounded mx-auto d-block mb-4 w-100"
+        src="{{restaurant.image}}"
+        alt="{{restaurant.name}}"
+        style="max-width: 600px;"
+      />
     </div>
   </div>
 </div>
