--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,10 +5,19 @@
       <form action="/restaurants">
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
-            value="{{ keyword }}" aria-describedby="search-button">
+          <input
+            type="text"
+            name="keyword"
+            class="form-control"
+            placeholder="輸入餐廳、分類"
+            aria-label="Restaurant Name..."
+            value="{{keyword}}"
+            aria-describedby="search-button"
+          />
           <div class="input-group-append">
-            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
+            <button class="btn btn-major" type="submit" id="search-button"><i
+                class="fas fa-search"
+              ></i></button>
           </div>
         </div>
       </form>
@@ -21,37 +30,55 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
+        {{#if message}}
+          <h1>{{message}}</h1>
+        {{/if}}
       <div class="row row-cols-sm-3">
         {{#each restaurants as |restaurant|}}
-        <a href="/restaurants/{{restaurant.id}}" class="text-secondary">
-          <div class="card mb-3">
-            <img class="card-img-top" src="{{restaurant.image}}"
-              alt="{{restaurant.name}}">
-            <div class="card-body p-3">
-              <h6 class="card-title mb-1">{{restaurant.name}}</h6>
+          <a href="/restaurants/{{restaurant.id}}" class="text-secondary">
+            <div class="card mb-3">
+              <img
+                class="card-img-top"
+                src="{{restaurant.image}}"
+                alt="{{restaurant.name}}"
+              />
+              <div class="card-body p-3">
+                <h6 class="card-title mb-1">{{restaurant.name}}</h6>
 
-              <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i> {{restaurant.category}}
+                <div class="restaurant-category mb-1">
+                  <i class="fas fa-utensils pr-2"></i>
+                  {{restaurant.category}}
+                </div>
+
+                <span class="badge rounded-pill bg-danger font-weight-normal">
+                  {{restaurant.rating}}
+                  <i class="fas fa-star fa-xs"></i>
+                </span>
+                <form
+                  action="/restaurants/delete/{{restaurant.id}}?_method=DELETE"
+                  method="POST"
+                  class="mt-2"
+                  onsubmit="return confirm('Are you sure you want to delete this restaurant?');"
+                >
+                  <button type="submit" class="btn btn-danger btn-sm">
+                    <i class="fas fa-trash"></i>
+                    Delete
+                  </button>
+                </form>
+                <form
+                  action="/restaurants/edit/{{restaurant.id}}"
+                  method="GET"
+                  class="mt-2"
+                >
+                  <button type="submit" class="btn btn-success btn-sm">
+                    <i class="fas fa-edit"></i>
+                    Edit
+                  </button>
+                </form>
+
               </div>
-
-              <span class="badge rounded-pill bg-danger font-weight-normal">
-                {{restaurant.rating}}
-                <i class="fas fa-star fa-xs"></i>
-              </span>
-              <form action="/restaurants/delete/{{restaurant.id}}?_method=DELETE" method="POST" class="mt-2" onsubmit="return confirm('Are you sure you want to delete this restaurant?');">
-                <button type="submit" class="btn btn-danger btn-sm">
-                  <i class="fas fa-trash"></i> Delete
-                </button>
-              </form>
-              <form action="/restaurants/edit/{{restaurant.id}}" method="GET" class="mt-2">
-                <button type="submit" class="btn btn-success btn-sm">
-                  <i class="fas fa-edit"></i> Edit
-                </button>
-              </form>
-            
             </div>
-          </div>
-        </a>
+          </a>
         {{/each}}
       </div>
     </div>
