--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,36 +1,48 @@
-<!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <title>Restaurant List</title>
-  <link href="/stylesheets/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
-  <link rel="shortcut icon"
-    href="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
-    type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Restaurant List</title>
+    <link href="/stylesheets/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css" />
+    <link
+      rel="shortcut icon"
+      href="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+    />
+  </head>
 
-<body>
-  <header>
-    <!-- navigation -->
-    <nav class="navbar navbar-light bg-light">
-      <div class="container">
-        <a class="navbar-brand" href="/">
-          <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
-            width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
-          我的餐廳清單
-        </a>
-      <a href="/restaurants/create" class="btn btn-primary">新增餐廳</a>
-      </div>
-    </nav>
-  
-    <div class="banner"></div>
-  </header>
-  
-  {{{body}}}
-  <script src="/javascripts/bootstrap.js"></script>
-</body>
+  <body>
+    <header>
+      <!-- navigation -->
+      <nav class="navbar navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <img
+              src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
+              width="30"
+              height="30"
+              class="d-inline-block align-top"
+              alt="我的餐廳清單"
+            />
+            我的餐廳清單
+          </a>
+          <div class="d-flex gap-2">
+            <a href="/restaurants/create" class="btn btn-primary">新增餐廳</a>
+            <a href="/restaurants/login" class="btn btn-primary">Login</a>
+          </div>
+        </div>
+      </nav>
+
+      <div class="banner"></div>
+    </header>
+
+    {{{body}}}
+    <script src="/javascripts/bootstrap.js"></script>
+  </body>
 
 </html>
