use express router

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,8 @@
+{{#if notice}}
+<script>
+  alert("{{notice}}");
+</script>
+{{/if}}
 <!-- search bar -->
 <div class="container search-bar">
   <div class="search-bar-outer">
