handle flash message by using message/error middleware

--- a/views/create.hbs
+++ b/views/create.hbs
@@ -3,7 +3,7 @@
     <div class="col-md-8 col-12 mx-auto">
       <h2 class="text-center mb-4">Add New Restaurant</h2>
       <form action="/restaurants/add" method="POST">
-        
+        {{> message }}
         <!-- Restaurant Name -->
         <div class="form-group mb-3">
           <label for="name">Restaurant Name (Japanese)</label>
