--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -2,9 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
-      {{#if message}}
-        <h1>{{message}}</h1>
-      {{/if}}
+      {{> message }}
       <p class="mb-1">
         <span class="text-secondary">
           <i class="fas fa-utensils pr-2"></i>
