--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -3,7 +3,7 @@
     <div class="col-md-8 col-12 mx-auto">
       <h2 class="text-center mb-4">Edit Restaurant</h2>
       <form action="/restaurants/update/{{restaurant.id}}?_method=PUT" method="POST">
-        
+        {{> message }}
         <!-- Restaurant Name -->
         <div class="form-group mb-3">
           <label for="name">Restaurant Name (Japanese)</label>
