--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,3 @@
-{{#if notice}}
-<script>
-  alert("{{notice}}");
-</script>
-{{/if}}
 <!-- search bar -->
 <div class="container search-bar">
   <div class="search-bar-outer">
@@ -35,9 +30,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
-        {{#if message}}
-          <h1>{{message}}</h1>
-        {{/if}}
+      {{> message }}
       <div class="row row-cols-sm-3">
         {{#each restaurants as |restaurant|}}
           <a href="/restaurants/{{restaurant.id}}" class="text-secondary">
