--- a/views/index.hbs
+++ b/views/index.hbs
@@ -84,14 +84,14 @@
 </div>
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">Previous</a>
+    <li class="page-item {{#if isFirst}}disabled{{/if}}">
+      <a class="page-link" href="?page={{Previous}}" tabindex="-1">Previous</a>
     </li>
-    <li class="page-item"><a class="page-link" href="?page=1">1</a></li>
-    <li class="page-item"><a class="page-link" href="?page=2">2</a></li>
-    <li class="page-item"><a class="page-link" href="?page=3">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Next</a>
+    {{#each pagination}}
+      <li class="page-item {{#if this.isCurrent}}active{{/if}}"><a class="page-link" href="?page={{this.current}}">{{this.current}}</a></li>
+    {{/each}}
+    <li class="page-item {{#if isLast}}disabled{{/if}}">
+      <a class="page-link" href="?page={{NextPage}}">Next</a>
     </li>
   </ul>
 </nav>
