implement login using passport

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -53,7 +53,7 @@
   </body>
   <!-- Modal -->
   <div
-    class="modal fade"
+    class="modal fade show"
     id="loginModal"
     tabindex="-1"
     aria-labelledby="loginModalLabel"
@@ -73,11 +73,12 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form action="/user/login" method="POST">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input
                 type="email"
+                name="email"
                 class="form-control"
                 id="exampleInputEmail1"
                 aria-describedby="emailHelp"
@@ -90,6 +91,7 @@
               <label for="exampleInputPassword1">Password</label>
               <input
                 type="password"
+                name="password"
                 class="form-control"
                 id="exampleInputPassword1"
                 placeholder="Password"
