--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -1,10 +1,11 @@
 {{#if success_msg}}
-  <script>
-    alert("{{success_msg}}");
-  </script>
+  <div style="width: 100%; padding: 10px; background-color: #d4edda; color: #155724; border-radius: 5px; border: 1px solid #c3e6cb; margin-bottom: 10px;">
+    {{success_msg}}
+  </div>
 {{/if}}
+
 {{#if error_msg}}
-  <script>
-    alert("{{error_msg}}");
-  </script>
+  <div style="width: 100%; padding: 10px; background-color: #f8d7da; color: #721c24; border-radius: 5px; border: 1px solid #f5c6cb; margin-bottom: 10px;">
+    {{error_msg}}
+  </div>
 {{/if}}
