--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,103 +17,11 @@
   </head>
 
   <body>
-    <header>
-      <!-- navigation -->
-      <nav class="navbar navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="/">
-            <img
-              src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
-              width="30"
-              height="30"
-              class="d-inline-block align-top"
-              alt="我的餐廳清單"
-            />
-            我的餐廳清單
-          </a>
-          <div class="d-flex gap-2">
-            <a href="/restaurants/create" class="btn btn-primary">新增餐廳</a>
-            <button
-              type="button"
-              class="btn btn-primary"
-              data-toggle="modal"
-              data-target="#loginModal"
-            >
-              Login
-            </button>
-          </div>
-        </div>
-      </nav>
-
-      <div class="banner"></div>
-    </header>
+          {{> header}}
 
     {{{body}}}
     <script src="/javascripts/bootstrap.js"></script>
   </body>
-  <!-- Modal -->
-  <div
-    class="modal fade show"
-    id="loginModal"
-    tabindex="-1"
-    aria-labelledby="loginModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="loginModalLabel">Login Form</h5>
-          <button
-            type="button"
-            class="close"
-            data-dismiss="modal"
-            aria-label="Close"
-          >
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form action="/user/login" method="POST">
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input
-                type="email"
-                name="email"
-                class="form-control"
-                id="exampleInputEmail1"
-                aria-describedby="emailHelp"
-                placeholder="Enter email"
-              />
-              <small id="emailHelp" class="form-text text-muted">We'll never
-                share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input
-                type="password"
-                name="password"
-                class="form-control"
-                id="exampleInputPassword1"
-                placeholder="Password"
-              />
-            </div>
-            <div class="form-group form-check">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                id="exampleCheck1"
-              />
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-            <a href="/user/register">
-              <button type="button" class="btn btn-primary">Register</button>
-            </a>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script
