--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,10 +16,10 @@
     />
   </head>
 
-  <body>
-          {{> header}}
-
+  <body>  
+    {{>header}}
     {{{body}}}
+    {{> footer}}
     <script src="/javascripts/bootstrap.js"></script>
   </body>
 
