--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,6 +20,7 @@
   <div class="container login-container">
     <div class="login-form">
       <h2 class="text-center">Sign In</h2>
+        {{> message}}
       <p class="text-center text-muted"></p>
       <form action="/user/login" method="POST">
         <div class="mb-3">
