--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -1,11 +1,18 @@
-{{#if success_msg}}
-  <div style="width: 100%; padding: 10px; background-color: #d4edda; color: #155724; border-radius: 5px; border: 1px solid #c3e6cb; margin-bottom: 10px;">
-    {{success_msg}}
+{{#if error_msg}}
+  <div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+    {{ error_msg }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 {{/if}}
-
-{{#if error_msg}}
-  <div style="width: 100%; padding: 10px; background-color: #f8d7da; color: #721c24; border-radius: 5px; border: 1px solid #f5c6cb; margin-bottom: 10px;">
-    {{error_msg}}
+{{#if success_msg}}
+  <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
+    {{ success_msg }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+{{/if}}
+{{#if warning_msg}}
+  <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+    {{ warning_msg }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 {{/if}}
