--- a/views/index.hbs
+++ b/views/index.hbs
@@ -64,7 +64,7 @@
                       </button>
                     </form>
                     <form
-                      action="/restaurants/edit/{{restaurant.id}}"
+                      action="/restaurants/{{restaurant.id}}/edit"
                       method="GET"
                       class="mt-2"
                     >
