--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -31,7 +31,7 @@
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             {{#if user.is_admin}}
               <li class="nav-item">
-              <a href="/admin">
+              <a href="/admin/restaurants">
                 <button
                   class="btn btn-outline-secondary my-2 mx-1"
                 >Admin 後台</button>
