--- a/views/admin/users.hbs
+++ b/views/admin/users.hbs
@@ -44,7 +44,7 @@
                 <button 
                   type="submit" 
                   class="btn btn-sm {{#if this.is_admin}}btn-outline-danger{{else}}btn-outline-primary{{/if}}" 
-                  onclick="return confirm('確定要調整 {{this.name}} 的權限嗎？');"
+                  onclick="return confirm('確定要調整 {{this.email}} 的權限嗎？');"
                 >
                   {{#if this.is_admin}}
                     <i class="bi bi-person-dash"></i> 設為 User
