--- a/views/index.hbs
+++ b/views/index.hbs
@@ -44,7 +44,7 @@
 
                 <div class="restaurant-category mb-1">
                   <i class="fas fa-utensils pr-2"></i>
-                  {{restaurant.category}}
+                  {{restaurant.Category.name}}
                 </div>
 
                 <span class="badge rounded-pill bg-danger font-weight-normal">
