--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -8,7 +8,7 @@
           <i class="fas fa-utensils pr-2"></i>
           類別：
         </span>
-        {{restaurant.category}}
+        {{restaurant.Category.name}}
       </p>
 
       <p class="mb-1">
