--- a/views/create.hbs
+++ b/views/create.hbs
@@ -17,9 +17,13 @@
         </div>
         
         <!-- Restaurant Category -->
-        <div class="form-group mb-3">
-          <label for="category">Category</label>
-          <input type="text" class="form-control" id="category" name="category" placeholder="Enter category (e.g., Italian, Sushi)" required>
+        <div class="form-row mb-3">
+        <label class="form-label" for="categoryId">Category</label>
+          <select class="form-control" id="categoryId" name="categoryId">
+           {{#each categories}}
+           <option value="{{this.id}}">{{this.name}}</option>
+          {{/each}}
+        </select>
         </div>
         
         <!-- Restaurant Image -->
