--- a/views/index.hbs
+++ b/views/index.hbs
@@ -105,16 +105,23 @@
     </div>
   </div>
 </div>
+<!--  -->
 <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
-    <li class="page-item {{#if isFirst}}disabled{{/if}}">
-      <a class="page-link" href="?page={{Previous}}" tabindex="-1">Previous</a>
+    <li class="page-item {{#ifCond pagination.currentPage 1}}disabled{{/ifCond}}">
+      <a class="page-link" href="/restaurants?page={{pagination.prev}}&categoryId={{categoryId}}" tabindex="-1">Previous</a>
     </li>
-    {{#each pagination}}
-      <li class="page-item {{#if this.isCurrent}}active{{/if}}"><a class="page-link" href="?page={{this.current}}">{{this.current}}</a></li>
+    {{#each pagination.pages}}
+      {{#ifCond this ../pagination.currentPage}}
+        <li class="page-item active"><a class="page-link" href="#">{{this}}</a></li>
+      {{else}}
+        <li class="page-item">
+          <a class="page-link" href="/restaurants?page={{this}}&categoryId={{../categoryId}}">{{this}}</a>
+        </li>
+      {{/ifCond}}
     {{/each}}
-    <li class="page-item {{#if isLast}}disabled{{/if}}">
-      <a class="page-link" href="?page={{NextPage}}">Next</a>
+    <li class="page-item {{#ifCond pagination.currentPage pagination.totalPage}}disabled{{/ifCond}}">
+      <a class="page-link" href="/restaurants?page={{pagination.next}}&categoryId={{categoryId}}">Next</a>
     </li>
   </ul>
 </nav>
