--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,6 +72,7 @@
                   <i class="fas fa-star fa-xs"></i>
                 </span>
                 <div class="button-container">
+
                     <form
                       action="/restaurants/delete/{{restaurant.id}}?_method=DELETE"
                       method="POST"
@@ -91,6 +92,16 @@
                       <button type="submit" class="btn btn-success btn-sm">
                         <i class="fas fa-edit"></i>
                         Edit
+                      </button>
+                    </form>
+                    <form action="/favorite/{{this.id}}?_method=DELETE" method="POST" class="d-inline">
+                      <button type="submit" class="btn btn-link text-danger p-0 border-0 mt-3">
+                          <i class="fas fa-heart fa-lg"></i> <!-- ❤️ 已收藏 -->
+                      </button>
+                    </form>
+                    <form action="/favorite/{{this.id}}" method="POST" class="d-inline">
+                      <button type="submit" class="btn btn-link text-danger p-0 border-0 mt-3">
+                        <i class="far fa-heart fa-lg"></i> <!-- 🤍 未收藏 -->
                       </button>
                     </form>
                   </div>
