--- a/views/index.hbs
+++ b/views/index.hbs
@@ -94,16 +94,19 @@
                         Edit
                       </button>
                     </form>
+                    {{#if isFavorited}}
                     <form action="/favorite/{{this.id}}?_method=DELETE" method="POST" class="d-inline">
                       <button type="submit" class="btn btn-link text-danger p-0 border-0 mt-3">
                           <i class="fas fa-heart fa-lg"></i> <!-- ❤️ 已收藏 -->
                       </button>
                     </form>
+                    {{else}}
                     <form action="/favorite/{{this.id}}" method="POST" class="d-inline">
                       <button type="submit" class="btn btn-link text-danger p-0 border-0 mt-3">
                         <i class="far fa-heart fa-lg"></i> <!-- 🤍 未收藏 -->
                       </button>
                     </form>
+                     {{/if}}
                   </div>
                 
                 
