create followship model

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -18,6 +18,11 @@
         </p>
         <p class="mb-3">
           <span class="text-secondary fw-bold">
+            <i class="fas fa-eye"></i> 發布者:
+          </span><a href="/user/{{restaurant.User.id}}">{{restaurant.User.email}}</a>
+        </p>
+        <p class="mb-3">
+          <span class="text-secondary fw-bold">
             <i class="fas fa-utensils"></i> 類別：
           </span>
           {{restaurant.Category.name}}
