--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -42,7 +42,7 @@
               <span class="text-white nav-link">Hi, {{user.email}}</span>
             </li>
             <li class="nav-item">
-              <a href="/users/{{user.id}}">
+              <a href="/user/{{user.id}}">
                 <button
                   class="btn btn-outline-warning my-2 mx-1"
                 >Proflie</button>
