support facebook OAuth2.0 login/register

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Restaurant List</title>
     <link href="/stylesheets/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/index.css" />
     <link
       rel="shortcut icon"
