--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,4 +1,5 @@
 <!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- Bootstrap Icons（如果有使用圖標） -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
@@ -18,7 +19,7 @@
         </p>
         <p class="mb-3">
           <span class="text-secondary fw-bold">
-            <i class="fas fa-eye"></i> 發布者:
+            <i class="fa-regular fa-user"></i> 發布者:
           </span><a href="/user/{{restaurant.User.id}}">{{restaurant.User.email}}</a>
         </p>
         <p class="mb-3">
