--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -23,7 +23,7 @@
 
         <!-- Statistics -->
         <ul class="list-inline mt-3">
-          <li class="list-inline-item"><strong>{{viewedUser.commentedRestaurants.length}}</strong> 已評論</li>
+          <li class="list-inline-item"><strong>{{viewedUser.Comments.length}}</strong> 已評論</li>
           <li class="list-inline-item"><strong>{{viewedUser.FavoritedRestaurants.length}}</strong> 收藏</li>
           <li class="list-inline-item">
             <a href="#" data-bs-toggle="modal" data-bs-target="#followingModal" class="text-decoration-none">
@@ -68,10 +68,10 @@
     <i class="fas fa-utensils"></i> 已發布餐廳名單
   </div>
   <div class="card-body d-flex flex-wrap gap-2">
-    {{#each user.publishedRestaurants}}
+    {{#each viewedUser.publishedRestaurants}}
       <a href="/restaurants/{{this.id}}" class="text-decoration-none">
         <img src="{{this.image}}" width="100" height="100" class="rounded border avatar" />
-        <p class="text-center mt-2">{{this.name}}</p>
+        
       </a>
     {{/each}}
   </div>
@@ -79,14 +79,16 @@
 <!-- 已評論餐廳 -->
 <div class="card shadow-sm mb-3">
   <div class="card-header fw-bold">
-    <i class="fas fa-comment-dots"></i> {{viewedUser.commentedRestaurants.length}} 已評論餐廳
+    <i class="fas fa-comment-dots"></i> {{viewedUser.Comments.length}} 已評論餐廳
   </div>
   <div class="card-body d-flex flex-wrap gap-2">
-    {{#each viewedUser.commentedRestaurants}}
-      <a href="/restaurants/{{this.id}}" class="text-decoration-none">
-        <img src="{{this.image}}" width="100" height="100" class="rounded border avatar" />
-        <p class="text-center mt-2">{{this.name}}</p>
-      </a>
+    {{#each viewedUser.Comments}}
+      {{#if this.Restaurant}} 
+        <a href="/restaurants/{{this.Restaurant.id}}" class="text-decoration-none">
+          <img src="{{this.Restaurant.image}}" width="100" height="100" class="rounded border avatar" />
+          <p class="text-center mt-2">{{this.Restaurant.name}}</p>
+        </a>
+      {{/if}}
     {{/each}}
   </div>
 </div>
